--- a/html/home.html
+++ b/html/home.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
     <link rel="stylesheet" href="../css/stylehome.css" />
     <link rel="stylesheet" href="../css/stylenavbar.css" />
     <link rel="stylesheet" href="../css/stylefooter.css" />
@@ -12,14 +14,15 @@
   <body>
     <header>
       <ul>
+        <li><a href="contact.html"> contact  </a></li>
         <li><a href="profil.html"> Profil </a></li>
-        <li><a href="registre.html">Basket</a></li>
+        <li><a href="basket.html">Basket</a></li>
         <li><a href="home.html">home</a></li>
       </ul>
     </header>
 
     <div class="grid-container">
-      <a href="#">
+      <a href="basket.html">
         <div class="grid-item">
           <div class="container">
             <img src="../img/voiture1.jpg" alt="Avatar" />
@@ -36,7 +39,7 @@
         </div>
       </a>
 
-      <a href="#">
+      <a href="basket.html">
         <div class="grid-item">
           <div class="container">
             <img
@@ -57,7 +60,7 @@
         </div>
       </a>
 
-      <a href="#">
+      <a href="basket.html">
         <div class="grid-item">
           <div class="container">
             <img
@@ -78,7 +81,7 @@
         </div>
       </a>
 
-      <a href="">
+      <a href="basket.html">
         <div class="grid-item">
           <div class="container">
             <img src="../img/voiture2.jpg" alt="Avatar" />
@@ -94,7 +97,7 @@
         </div>
       </a>
 
-      <a href="">
+      <a href="basket.html">
         <div class="grid-item">
           <div class="container">
             <img src="../img/voiture4.jpg" alt="Avatar" />
@@ -111,7 +114,7 @@
         </div>
       </a>
 
-      <a href="">
+      <a href="basket.html">
         <div class="grid-item">
           <div class="container">
             <img src="../img/voiture7.jpg" alt="Avatar" />
@@ -184,27 +187,9 @@
           <div class="col social">
             <h1>Social</h1>
             <ul>
-              <li>
-                <img
-                  src="https://svgshare.com/i/5fq.svg"
-                  width="32"
-                  style="width: 32px"
-                />
-              </li>
-              <li>
-                <img
-                  src="https://svgshare.com/i/5eA.svg"
-                  width="32"
-                  style="width: 32px"
-                />
-              </li>
-              <li>
-                <img
-                  src="https://svgshare.com/i/5f_.svg"
-                  width="32"
-                  style="width: 32px"
-                />
-              </li>
+              <li><img src="../img/facebook.png" width="32" style="width: 32px;"></li>
+              <li><img src="../img/gmail.png" width="32" style="width: 32px;"></li>
+              <li><img src="../img/linkedin.png" width="32" style="width: 32px;"></li>
             </ul>
           </div>
           <div class="clearfix"></div>
