--- a/html/login.html
+++ b/html/login.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="login-content">
-        <form action="login.html">
+        <form action="acceuilagence.html">
             <h2>Welcome</h2>
             <div class="input-div">
                 <div class="i">
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <a href="home.html">Forget Password?</a>
-          <a href="home.html"><input type="submit" value="Login" class="btn"></a>  
+          <a href="acceuilagence.html"><input type="submit" value="Login" class="btn"></a>  
         </form>
     </div>
 
@@ -115,9 +115,9 @@
         <div class="col social">
           <h1>Social</h1>
           <ul>
-            <li><img src="https://svgshare.com/i/5fq.svg" width="32" style="width: 32px;"></li>
-            <li><img src="https://svgshare.com/i/5eA.svg" width="32" style="width: 32px;"></li>
-            <li><img src="https://svgshare.com/i/5f_.svg" width="32" style="width: 32px;"></li>
+            <li><img src="../img/facebook.png" width="32" style="width: 32px;"></li>
+            <li><img src="../img/gmail.png" width="32" style="width: 32px;"></li>
+            <li><img src="../img/linkedin.png" width="32" style="width: 32px;"></li>
           </ul>
         </div>
       <div class="clearfix"></div>
