--- a/html/registre.html
+++ b/html/registre.html
@@ -48,6 +48,27 @@
                 </div>
             </div>
 
+            
+            <div class="input-div">
+              <div class="i">
+                  <i class="fas fa-user"></i>
+              </div>
+              <div>
+                  <label for="">Phone Number</label>
+                  <input class="input" type="number">
+              </div>
+          </div>
+
+          <div class="input-div">
+            <div class="i">
+                <i class="fas fa-user"></i>
+            </div>
+            <div>
+                <label for="">Company</label>
+                <input class="input" type="text">
+            </div>
+        </div>
+
             <div class="input-div">
                 <div class="i">
                     <i class="fas fa-user"></i>
@@ -58,15 +79,7 @@
                 </div>
             </div>
 
-            <div class="input-div">
-                <div class="i">
-                    <i class="fas fa-user"></i>
-                </div>
-                <div>
-                    <label for="">Confirm Password</label>
-                    <input class="input" type="password">
-                </div>
-            </div>
+            
            <a href="login.html">i have a counte</a>
             <input type="submit" value="Register" class="btn">
           </form>
@@ -130,9 +143,9 @@
             <div class="col social">
               <h1>Social</h1>
               <ul>
-                <li><img src="https://svgshare.com/i/5fq.svg" width="32" style="width: 32px;"></li>
-                <li><img src="https://svgshare.com/i/5eA.svg" width="32" style="width: 32px;"></li>
-                <li><img src="https://svgshare.com/i/5f_.svg" width="32" style="width: 32px;"></li>
+                <li><img src="../img/facebook.png" width="32" style="width: 32px;"></li>
+                <li><img src="../img/gmail.png" width="32" style="width: 32px;"></li>
+                <li><img src="../img/linkedin.png" width="32" style="width: 32px;"></li>
               </ul>
             </div>
           <div class="clearfix"></div>
