--- a/html/acceuil.html
+++ b/html/acceuil.html
@@ -55,6 +55,7 @@
 </div>
 </div>
 
+</div>
 <footer>
 
     <div class="footer">
@@ -111,9 +112,9 @@
         <div class="col social">
           <h1>Social</h1>
           <ul>
-            <li><img src="https://svgshare.com/i/5fq.svg" width="32" style="width: 32px;"></li>
-            <li><img src="https://svgshare.com/i/5eA.svg" width="32" style="width: 32px;"></li>
-            <li><img src="https://svgshare.com/i/5f_.svg" width="32" style="width: 32px;"></li>
+            <li><img src="../img/facebook.png" width="32" style="width: 32px;"></li>
+            <li><img src="../img/gmail.png" width="32" style="width: 32px;"></li>
+            <li><img src="../img/linkedin.png" width="32" style="width: 32px;"></li>
           </ul>
         </div>
       <div class="clearfix"></div>
